--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,14 +1,50 @@
-# ML Service Requirements - Production Inference Only
-# Minimal dependencies for running trained models
+# # ML Service Requirements - Production Inference Only
+# # Minimal dependencies for running trained models
 
-# Web Framework (Lightweight & Fast)
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+# # Web Framework (Lightweight & Fast)
+# fastapi==0.109.0
+# uvicorn[standard]==0.27.0
+# pydantic==2.7.4
+
+# # Machine Learning (Core Dependencies for Inference)
+# scikit-learn==1.6.1
+# numpy==2.2.3
+# joblib==1.4.2
+
+# # Utilities (Minimal)
+# python-dateutil==2.9.0.post0
+
+
+
+# pydantic-settings==2.10.1
+# # ==========================================
+# # REMOVED (Not needed for production inference):
+# # ==========================================
+# # pydantic-settings==2.10.1  # Not used
+# # scipy==1.15.2  # Heavy, not needed for basic sklearn models
+# # nltk==3.9.1  # Not used in preprocessing
+# # regex==2024.11.6  # Not used
+# # pandas==2.2.3  # Not used for inference (only training)
+# # typing-extensions==4.12.2  # Python 3.11+ has built-in typing
+# # psutil==5.9.8  # Optional monitoring, not essential
+# # pytest==7.4.4  # Testing only, not production
+# # httpx==0.27.1  # Testing only, not production
+
+
+
+
+
+
+
+fastapi==0.110.0
+uvicorn==0.27.1
+numpy==1.26.4
+scikit-learn==1.4.2
+
 pydantic==2.7.4
 
 # Machine Learning (Core Dependencies for Inference)
-scikit-learn==1.6.1
-numpy==2.2.3
+
 joblib==1.4.2
 
 # Utilities (Minimal)
@@ -17,15 +53,3 @@ python-dateutil==2.9.0.post0
 
 
 pydantic-settings==2.10.1
-# ==========================================
-# REMOVED (Not needed for production inference):
-# ==========================================
-# pydantic-settings==2.10.1  # Not used
-# scipy==1.15.2  # Heavy, not needed for basic sklearn models
-# nltk==3.9.1  # Not used in preprocessing
-# regex==2024.11.6  # Not used
-# pandas==2.2.3  # Not used for inference (only training)
-# typing-extensions==4.12.2  # Python 3.11+ has built-in typing
-# psutil==5.9.8  # Optional monitoring, not essential
-# pytest==7.4.4  # Testing only, not production
-# httpx==0.27.1  # Testing only, not production
